--- a/weapp/termite/static/termite_js/app/component/appkit/groupdescription/groupdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/groupdescription/groupdescription.html
@@ -47,9 +47,7 @@
                                 data-validate='require-select-span::请选择团购类型'
                                 data-check-className='radio-select checkbox-select'
                             >
-                                <li class="wui-i-item xa-inputControl" data-component-cid="{{component.cid}}"
-                                    data-input-name="{{component.model.title}}"
-                                >
+                                <li class="wui-i-item xa-inputControl" data-input-name="{{component.model.title}}">
                                     <div style="padding: 3px 0;">
                                         <span id="radio_item_{{component.cid}}" name="radio_{{component.parent_component.cid}}"
                                       data-type="radio" span-type="selection"  class="selection-radio" data-input-name="{{ component.model.group_type }}">
