--- a/weapp/termite/static/termite_js/app/component/appkit/groupdescription/groupdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/groupdescription/groupdescription.html
@@ -7,7 +7,7 @@
                 <div class="wui-i-shop_circle">
                     <img src="/static/img/default_shop_avatar.png">
                 </div>
-                <span style="text-align:center;width: 0px;height:0px;border-width:20px;border-style:solid;border-color: #F2F2F2 #ffffff #F2F2F2 #F2F2F2;text-indent:2em;"><br></span>
+                <span class="wui-i-title-pic-icon"></span>
                 <div class="wui-i-title-pic"></div>
                 <div class="wui-i-rules xa-rules">
                     <div class="wui-i-title xa-i-title">
